--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,3 +24,8 @@ workflows:
   workflow:
       jobs:
         - publish
+        filters:
+          tags:
+            only: /[0-9]+(\.[0-9]+)*/
+          branches:
+            ignore: /.*/
