--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,11 +21,11 @@ jobs:
 
 workflows:
   version: 2
-  workflow:
-      jobs:
-        - publish
-        filters:
-          tags:
-            only: /[0-9]+(\.[0-9]+)*/
+  release:
+    jobs:
+      - publish
+          filters:
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
           branches:
             ignore: /.*/
