--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ workflows:
   version: 2
   release:
     jobs:
-      - publish
+      - publish:
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*/
