--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ jobs:
       - checkout
       - restore_cache:
           key: cache-{{ checksum "package.json" }}
+      - update_npm:
+          command: npm install -g npm@7.6.3
       - run:
           name: Install node modules
           command: npm install
