--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,5 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "google",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "google", "plugin:prettier/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -32,19 +26,14 @@
     "new-cap": [
       "error",
       {
-        "capIsNewExceptions": [
-          "GestureEventListeners"
-        ],
+        "capIsNewExceptions": ["GestureEventListeners"],
         "capIsNewExceptionPattern": "^Etools..|..Mixin$"
       }
     ],
     "no-var": "off",
     "require-jsdoc": "off",
     "valid-jsdoc": "off",
-    "comma-dangle": [
-      "error",
-      "never"
-    ],
+    "comma-dangle": ["error", "never"],
     "max-len": [
       "error",
       {
@@ -62,9 +51,7 @@
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
-    "@typescript-eslint/ban-types": [
-      "warn"
-    ],
+    "@typescript-eslint/ban-types": ["warn"],
     "@typescript-eslint/no-use-before-define": [
       "error",
       {
