Adding GDD types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "noFallthroughCasesInSwitch": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
+    "noEmitHelpers": true,
+    "importHelpers": true,
     "outDir": "dist"
   },
   "include": [
