--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unicef-polymer/etools-types",
   "description": "Etools types",
-  "version": "1.11.17",
+  "version": "1.11.18-rc.3",
   "contributors": [
     "eTools Team"
   ],
